<resources>
    <string name="app_name">Bookfolio</string>
    <!-- Authentication -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account_redirect">Don\'t have an account? Click here to create one</string>
    <string name="name">Name</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="register_account_toolbar">Register Account</string>

    <!-- Error messages -->
    <string name="default_error_message">Please try again later</string>
    <string name="check_credentials">Please check your credentials</string>
    <string name="account_does_not_exist">This account does not exist</string>
    <string name="invalid_password">The password that you have entered does not match the one we have on file</string>
    <string name="invalid_email">Please provide a valid email</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="empty_quote">Your quote is empty. Please provide some text.</string>

    <!-- Bottom Navigation Items -->
    <string name="shelves">Shelves</string>
    <string name="favourites">Favourites</string>
    <string name="discover">Discover</string>
    <string name="account">Account</string>

    <!-- Shelves region -->
    <string name="shelves_welcome_message">Hi %1$s,\nYou are currently reading</string>
    <string name="number_of_books">%1$s books</string>
    <string name="to_read_shelf">To read</string>
    <string name="read_shelf">Read</string>
    <string name="currently_reading_shelf">Currently reading</string>
    <string name="removed_book_success">You have successfully removed this book from your shelf!</string>
    <string name="no_books_in_shelf_placeholder">Currently you have no books in this shelf</string>

    <!-- Book details region -->
    <string name="page_count">%1$d pages</string>
    <string name="no_description_available">This book does not have a description</string>

    <!-- Book journal region -->
    <string name="book_journal_title">My book journal</string>
    <string name="book_journal_error">Your book journal cannot be retrieved right now. Please try again later.</string>
    <string name="no_page_number_added">Type on the icon to add the page number of this quote</string>
    <string name="no_page_number_provided">You must provide a page number!</string>
    <string name="page_number">page %1$s</string>
    <string name="removed_quote_success">You have successfully removed this quote from your journal!</string>

    <!-- Quotes region -->
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="removed_quote_from_favourites_success">You have successfully removed this quote from your favourites!</string>

    <!-- Search region -->
    <string name="search_hint">Search title, author or ISBN</string>
    <string name="search_placeholder_text">Search your favourite books by title or author</string>

    <!-- Account region -->
    <string name="log_out">Log out</string>
    <string name="detele_account">Detele account</string>
    <string name="edit_name">Edit name</string>
    <string name="or">or</string>
    <string name="not_name">Not %1$s?</string>

</resources>